Cleaning up javascript and layout issues with the results page.

--- a/SmartRoutes/Content/Site.css
+++ b/SmartRoutes/Content/Site.css
@@ -85,6 +85,13 @@ textarea {
     height: 75px;
 }
 
+/* Common styling
+------------------------------------------------------------*/
+.sr-section-heading {
+    background-color: #4479d4;
+    height: 50px;
+}
+
 /* Common styling for text areas
 ------------------------------------------------------------*/
 .sr-text-area-title {
